<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">

    <TextView
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/search_artists"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/background_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:text="@string/description"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="19sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/picture" />

    <TextView
        android:id="@+id/biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/background_gradient_button"
        android:gravity="center"
        android:minHeight="56dp"
        android:text="@string/biography_artist"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bestTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/background_best_tracks"
        android:gravity="center"
        android:minHeight="56dp"
        android:text="@string/best_tracks"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp" />

</LinearLayout>