<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="36dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <TextView
        android:id="@+id/headBiography"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/biography"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBiography"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_small_search"
        android:drawablePadding="8dp"
        android:drawableTint="@color/black"
        android:hint="@string/who_are_looking"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textFontWeight="300"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/headBiography"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_divider"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/etBiography" />

    <TextView
        android:id="@+id/buttonBiography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_gradient_button"
        android:gravity="center"
        android:paddingHorizontal="48dp"
        android:paddingVertical="12dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <LinearLayout
        android:id="@+id/containerDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/buttonBackForBiography"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/buttonBiography">

        <ImageView
            android:id="@+id/pictureArtist"
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:layout_gravity="center"
            tools:src="@drawable/picture" />

        <TextView
            android:id="@+id/nameArtist"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="26sp"
            tools:text="Людоед" />

        <TextView
            android:id="@+id/bioArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineHeight="19dp"
            android:maxLines="6"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="16sp"
            tools:text="«Людоед» - российская группа из Кирова, которая играет смесь хардкор-панка и блэк-метала." />

    </LinearLayout>

    <TextView
        android:id="@+id/buttonBackForBiography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:lineHeight="29dp"
        android:text="@string/back_button"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>